# ChessGame

./: CMakeLists.txt  README.md
inc/args/: ArgsParser.hxx  ArgumentBase.hxx  CMDArgument.hxx
inc/chess/: Board.hxx  GameMgr.hxx
inc/client/: ChessClient.hxx
inc/io/: Logger.hxx  Query.hxx
inc/pieces/: BasePiece.hxx  Bishop.hxx  EmptyPiece.hxx  King.hxx  Knight.hxx  Pawn.hxx  PieceMgr.hxx  Queen.hxx  Rook.hxx
inc/player/: Player.hxx  PlayerMgr.hxx
inc/server/: ChessServer.hxx  ChessServiceImpl.hxx
inc/sys/: SignalHandler.hxx
inc/utils/: C2P_Converter.hxx  Defines.hxx  Exception.hxx  Logger.hxx  P2C_Converter.hxx  Query.hxx  Types.hxx
proto/: ChessServer.proto  ChessServerTypes.proto
proto/protogen/: ChessServer.grpc.pb.cc  ChessServer.grpc.pb.h  ChessServer.pb.cc  ChessServer.pb.h  ChessServerTypes.grpc.pb.cc  ChessServerTypes.grpc.pb.h  ChessServerTypes.pb.cc  ChessServerTypes.pb.h
scripts/: generate_protos.sh
src/: main.cxx  server.cxx
src/args/: ArgsParser.cxx  CMDArgument.cxx
src/chess/: Board.cxx  GameMgr.cxx
src/client/: ChessClient.cxx
src/io/: Logger.cxx  Query.cxx
src/pieces/: BasePiece.cxx  Bishop.cxx  EmptyPiece.cxx  King.cxx  Knight.cxx  Pawn.cxx  PieceMgr.cxx  Queen.cxx  Rook.cxx
src/player/: PlayerMgr.cxx
src/server/: ChessServer.cxx  ChessServiceImpl.cxx
src/sys/: SignalHandler.cxx
src/sys/ms/: SignalHandler.cxx
src/sys/posix/: SignalHandler.cxx
src/utils/: Converter.cxx  Exception.cxx  Logger.cxx  Query.cxx  Types.cxx
