CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )

PROJECT( ChessGame VERSION 1.0 )

SET( CMAKE_CXX_STANDARD 11 )
SET( CMAKE_BUILD_TYPE DEBUG )

SET( LIBS ${LIBS} utils )

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/inc
    ${PROJECT_SOURCE_DIR}/src
    )

FILE( GLOB CHESS_SOURCES
    "${PROJECT_SOURCE_DIR}/src/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/chess/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/pieces/*.cxx"
    )
FILE( GLOB UTILS_SOURCES "${PROJECT_SOURCE_DIR}/src/utils/*.cxx" )

ADD_LIBRARY( utils SHARED ${UTILS_SOURCES} )
ADD_EXECUTABLE( ChessGame ${CHESS_SOURCES} )
TARGET_LINK_LIBRARIES( ChessGame utils )
