CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )

PROJECT( ChessGame VERSION 1.0 )

SET( CMAKE_CXX_STANDARD 11 )
SET( CMAKE_BUILD_TYPE DEBUG )

FIND_PACKAGE( Boost REQUIRED COMPONENTS program_options )

SET( LIBS ${LIBS} utils )
SET( LIBS ${LIBS} chessgame )
SET( LIBS ${LIBS} ${Boost_LIBRARIES} )

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/inc
    ${PROJECT_SOURCE_DIR}/src
    ${Boost_INCLUDE_DIRS}
    )

FILE( GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/src/main.cxx" )
FILE( GLOB CHESS_SOURCES
    "${PROJECT_SOURCE_DIR}/src/args/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/chess/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/pieces/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/player/*.cxx"
    )
FILE( GLOB UTILS_SOURCES "${PROJECT_SOURCE_DIR}/src/utils/*.cxx" )

ADD_LIBRARY( utils SHARED ${UTILS_SOURCES} )
ADD_LIBRARY( chessgame SHARED ${CHESS_SOURCES} )
ADD_EXECUTABLE( ChessGame ${MAIN_SOURCES} )
TARGET_LINK_LIBRARIES( ChessGame ${LIBS} )
